# mecha-kingdom-jax

./: LICENSE  README.md  pyproject.toml
01_single_neuron/: main.py
02_xor_network/: main.py
