[project]
name = "mecha-kingdom-jax"
version = "0.1.0"
description = ""
authors = [
    {name = "Jared Childers",email = "jared.childers97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda13] (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
